Fix space and overflow issues. Update assets and compostion

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -50,8 +50,8 @@ textarea {
   width: 100%;
   padding: 1.5rem;
   border-radius: 0.5rem;
-  background: transparent;
-  border: 2px solid var(--color-primary-variant);
+  background: var(--color-bg-variant);
+  border: 3px solid var(--color-primary-variant);
   resize: none;
   color: var(--color-white);
 }
